--- a/package.json
+++ b/package.json
@@ -8,8 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@popperjs/core": "2.9.1",
+    "@tailwindcss/forms": "0.2.1",
+    "@zeit/next-css": "^1.0.1",
+    "autoprefixer": "10.2.5",
+    "chart.js": "2.9.4",
+    "formik": "^2.2.6",
+    "framer-motion": "^4.0.0",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
     "next": "10.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.7.0",
+    "path": "^0.12.7",
+    "postcss": "8.2.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-parallax": "^3.2.1",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0",
+    "tailwindcss": "2.0.4",
+    "webpack": "^5.32.0"
   }
 }
