--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "books",
+  "name": "uju-the-storyteller",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/Profile",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
     "@material-ui/core": "^4.11.3",
